<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/search_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/search_title"
        android:textColor="@color/black"
        android:textSize="24sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/black"/>

    <EditText
        android:id="@+id/search_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/search_location_hint"
        android:textColorHint="#78909C"
        android:inputType=""
        android:autofillHints="" />

    <EditText
        android:id="@+id/search_checkin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:focusable="false"
        android:hint="@string/search_checkin_hint"
        android:onClick="showDatePickerDialog"
        android:textColorHint="#78909C"
        android:inputType=""
        android:autofillHints="" />

    <EditText
        android:id="@+id/search_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:focusable="false"
        android:hint="@string/search_checkout_hint"
        android:onClick="showDatePickerDialog"
        android:textColorHint="#78909C"
        android:inputType=""
        android:autofillHints="" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/search_button_text"
        tools:ignore="DuplicateSpeakableTextCheck" />

</LinearLayout>
