<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <!-- Campo de entrada de nombre -->
            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="textCapWords"
                android:textColorHint="#78909C"
                android:autofillHints="" />

            <!-- Campo de entrada de correo electrónico -->
            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_name"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColorHint="#78909C"
                android:autofillHints="" />

            <!-- Campo de entrada de contraseña -->
            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_email"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColorHint="#78909C"
                android:autofillHints="" />

            <!-- Botón de registro -->
            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/DodgerBlue"
                android:layout_below="@id/input_password"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/btn_register" />

            <!-- Link para iniciar sesión -->
            <TextView
                android:id="@+id/link_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_register"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/Black"
                android:text="@string/link_login"
                android:textAlignment="center"
                android:textSize="16sp" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
