<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <!-- Título del fragmento -->
    <TextView
        android:id="@+id/filter_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/filter_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Selector de categorías -->
    <TextView
        android:id="@+id/category_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/category_label"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/spinner_background"
        android:minHeight="48dp"
        android:spinnerMode="dropdown" />

    <!-- Selector de fecha -->
    <TextView
        android:id="@+id/date_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/date_label"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/date_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/spinner_background"
        android:minHeight="48dp"
        android:spinnerMode="dropdown" />

    <!-- Botón de aplicar filtros -->
    <Button
        android:id="@+id/filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/DodgerBlue"
        android:text="@string/filter_button"
        android:textColor="@color/white" />
</LinearLayout>